@@ -515,6 +515,12 @@ test("maxWords", function() {
 	ok( !method("<b>hello</b> world", 2), "html, invalid" );
 });
 
+test("pattern", function() {
+	var method = methodTest("pattern");
+	ok( method( "AR1004", /^AR\d{4}$/ ), "Correct format for the given RegExp" );
+	ok( !method( "BR1004", /^AR\d{4}$/ ), "Invalid format for the given RegExp" );
+});
+
 function testCardTypeByNumber(number, cardname, expected) {
 	$("#cardnumber").val(number);
 	var actual = $("#ccform").valid();
@@ -582,3 +588,4 @@ test('creditcardtypes, mastercard', function() {
 });
 
 })(jQuery);
+
