@@ -6,6 +6,7 @@
 * Fixed Russian localization, minor syntax issue
 * Added in support for HTML 5 input types, fixes #97
 * Fixed showLabel() removing all classes from error element. Remove only settings.validClass. Fixes #151.
+* Added 'pattern' to additional-methods to validate against arbitraty regular expressions.
 
 1.8.1
 ---
